fix layout bug

--- a/app/assets/stylesheets/base/_layout.scss
+++ b/app/assets/stylesheets/base/_layout.scss
@@ -22,6 +22,6 @@ a img{
 .action-buttons {
   a {
     margin: 1px;
-    float: right
+    float: right;
   }
 }
